Changelog
---------
0.82
*features
- easter bunny
- pied piper quest
- open manual on key F1
- added /volume support for sound
- added sound groups (attacks, background music, gui)
- asynchronous database access for logging

*admins*
- new /script AdminPortal.class
- support answer contains the name of the asking player in the greeting

*website*
- added detail view of news items on their own pages (with nice urls)
- improvements to various icons
- reorganisation and cleanup of http://arianne.sf.net

*bug fixes*
- Carmen only asks for her quest if the player is at least level 2.
- improved stability of the client in uncommon situations
- stat changes that occured during zone change (like losing xp on death) did not update the stats window.


0.81.3
- prevent crash on "No line matching interface" (fixes #2970406)

0.81.2
*bug fixes*
- fixed a crash on Linux using alsa (non pulse) audio drivers and Sun Java (not OpenJDK) 
  if all channels are in use by another application
- fixed InvalidVersionExceptions in the network code on high latency connections 
  (for example for people living outside Europe to an server in Europe)
- handle failure to load sprite images more gracefully
- improved logging of uncaught exceptions 

0.81.2 contains the first results of the Client Quality Weeks. Thanks everyone for providing
your error log files and pleace continue to do so.

0.81.1
*bug fixes*
- fixed an issue with 0 hp created by logging out while dying (thanks to Andrzej Kofański)
- prevent client crash on empty soundNameList
- renamed admins.list to admins.txt to simplify installation on windows with hidden file name extensions
- fixed a server side classpath issue
- updated to Marauroa 3.5 to fix an issue with null-values in the timedate columns in gameEvents and account


0.81
*features*
- player stats moved from the character window to the side panel
- a dragbar for making the game screen smaller (handy for netbooks)
- new quest from Ouchit with new NPC in ados forest